<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="app.gaojinlei.note.login.LoginActivity">
    <!-- Login progress -->

    <TextView

        android:id="@+id/textView10"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03a9f4"
        android:padding="10dp"
        android:text="登陆"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="80dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/button"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:hint="@string/prompt_phone"
                        android:inputType="textPhonetic"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:width="200dp"
                            android:hint="@string/prompt_password"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true" />

                        <Button
                            android:id="@+id/button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/password"
                            android:layout_alignBottom="@+id/password"
                            android:layout_marginLeft="19dp"
                            android:layout_marginStart="19dp"
                            android:layout_toEndOf="@+id/password"
                            android:layout_toRightOf="@+id/password"
                            android:layout_weight="1"
                            android:background="#8503a9f4"
                            android:onClick="getcode"
                            android:text="获取验证码" />
                    </RelativeLayout>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/phone_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="#03a9f4"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_marginTop="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/QQlogin"
                        android:layout_width="64dp"
                        android:layout_height="71dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:width="10dp"
                        android:height="15dp"
                        android:background="@mipmap/qq_login_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/QQlogin"
                        android:layout_centerHorizontal="true"
                        android:text="使用QQ登陆" />
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>
